--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
   --foreground: #171717;
 }
 
-@theme inline {
+:root {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
@@ -14,7 +14,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    /* --background: #0a0a0a; */
+    --background: #fdf7f7;
     --foreground: #2e2d2d;
   }
 }
@@ -26,7 +27,6 @@ body {
 }
 
 
-@tailwind utilities;
 
 @keyframes fadeIn {
   0% {
